src/objects/pse_Under_Consideration__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>pse_idea__r.pse_Idea_Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Innovation_Type__c</fullName>
        <formula>pse_idea__r.pse_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Innovation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <formula>pse_idea__r.CreatedBy.FirstName &amp; &apos; &apos; &amp;  pse_idea__r.CreatedBy.LastName</formula>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse_Number_of_Comments__c</fullName>
        <formula>pse_idea__r.pse_Number_of_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse_Status__c</fullName>
        <formula>IF(ISPICKVAL( pse_idea__r.pse_Status__c , &quot;Under Consideration by Committee&quot;), TEXT(pse_idea__r.pse_Status__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse_Title__c</fullName>
        <formula>pse_idea__r.pse_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse_Votes_Down__c</fullName>
        <formula>pse_idea__r.pse_VotesDown__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Votes Down</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse_Votes_Up__c</fullName>
        <formula>pse_idea__r.pse_VotesUp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Votes Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse_idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the idea being reviewed. Used to update the fields of the Under Review Object with formulas.</description>
        <label>Idea</label>
        <referenceTo>pse_Idea__c</referenceTo>
        <relationshipLabel>Under Consideration</relationshipLabel>
        <relationshipName>Under_Consideration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_under_review_since__c</fullName>
        <description>Date at which the idea is under review by the innovation committe.</description>
        <inlineHelpText>Date at which the idea is under review by the innovation committe.</inlineHelpText>
        <label>under review since</label>
        <type>Date</type>
    </fields>
    <label>Under Consideration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>pse_idea__c</columns>
        <columns>Innovation_Type__c</columns>
        <columns>pse_Number_of_Comments__c</columns>
        <columns>pse_Status__c</columns>
        <columns>Submitted_By__c</columns>
        <columns>pse_Title__c</columns>
        <columns>pse_under_review_since__c</columns>
        <columns>pse_Votes_Down__c</columns>
        <columns>pse_Votes_Up__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllIdeas</fullName>
        <filterScope>Everything</filterScope>
        <label>All Ideas</label>
    </listViews>
    <listViews>
        <fullName>pse_Under_Review</fullName>
        <columns>pse_idea__c</columns>
        <columns>Innovation_Type__c</columns>
        <columns>pse_Number_of_Comments__c</columns>
        <columns>pse_Status__c</columns>
        <columns>pse_Title__c</columns>
        <columns>pse_under_review_since__c</columns>
        <columns>pse_Votes_Down__c</columns>
        <columns>pse_Votes_Up__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse_Status__c</field>
            <operation>equals</operation>
            <value>Under Review by Committee</value>
        </filters>
        <label>Under Review</label>
    </listViews>
    <nameField>
        <displayFormat>UC-{0000}</displayFormat>
        <label>Under Consideration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Under Consideration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>